@@ -4,7 +4,3 @@ import pkg_resources
 
 #: Module version, as defined in PEP-0396.
 __version__ = pkg_resources.get_distribution(__package__).version
-
-
-#: API shortcuts.
-from django_docusign.api import *  # NoQA
