@@ -1,15 +1,16 @@
 """Declaration of API shortcuts.
 
 Everything declared (or imported) in this module is exposed in
-:mod:`django_docusign` root package, i.e. available when one does
-``import django_docusign``.
+:mod:`django_docusign.api` package, i.e. available when one does
+``from django_docusign import api as django_docusign``.
 
 Here are the motivations of such an "api" module:
 
 * as a `django-docusign` library user, in order to use `django-docusign`, I
-  just do ``import django_docusign``. It is enough for most use cases. I do not
-  need to bother with more `django_docusign` internals. I know this API will be
-  maintained, documented, and not deprecated/refactored without notice.
+  just do ``from django_docusign import api as django_docusign``.
+  It is enough for most use cases. I do not need to bother with more
+  `django_docusign` internals. I know this API will be maintained, documented,
+  and not deprecated/refactored without notice.
 
 * as a `django-docusign` library developer, in order to maintain
   `django-docusign` API, I focus on things declared in
